Fixes #15. Lays most of the groundwork for #14 but requires some refactoring of how we compile scripts and test cases.
